--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+
+    <!-- FONT AWESOME  -->
+    <script src="https://kit.fontawesome.com/3eca49017a.js" crossorigin="anonymous"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
